--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "react": "15.2.1",
-    "react-native": "^0.30.0"
+    "react-native": "^0.30.0",
+    "react-native-button": "^1.6.0",
+    "react-native-router-flux": "^3.32.0",
+    "react-native-vector-icons": "^2.0.3",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-eslint": "5.0.0",
@@ -25,7 +32,6 @@
   },
   "author": "ge_yangyang@126.com",
   "pre-commit": [
-    "lint",
-    "validate"
+    "lint"
   ]
 }
