--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-jsx-a11y": "1.4.2",
     "eslint-plugin-react": "5.1.1",
     "estraverse-fb": "1.3.1",
-    "precommit-hook-eslint": "3.0.0"
+    "precommit-hook-eslint": "3.0.0",
+    "remote-redux-devtools": "^0.4.0"
   },
   "author": "ge_yangyang@126.com",
   "pre-commit": [
