--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-actions": "^0.10.1",
     "redux-logger": "^2.6.1",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
