--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "lodash": "^4.14.2",
+    "mx-artifacts": "^0.2.9",
     "react": "15.2.1",
     "react-native": "^0.30.0",
     "react-native-button": "^1.6.0",
