--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
     "global-require": ["error"],
     "import/no-unresolved": ["error", { ignore: ['\.img$', '\.png$', 'NativeModules'] }],
     "max-len": ["error", 120, 2],
-    "new-cap": ["error", { "capIsNewExceptions": [] }],
+    "new-cap": ["error", { "capIsNewExceptions": ["Alert"] }],
     "no-param-reassign": ["error", { "props": false }],
     "no-trailing-spaces": ["error", { "skipBlankLines": true }],
     "no-underscore-dangle": ["off", { "allowAfterThis": true }],
