--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,6 @@
     "quote-props": ["error", "consistent-as-needed", { "keywords": true }],
     "react/jsx-boolean-value": ["error", "always"],
     "react/jsx-pascal-case": ["warn", { ignore: ["IM"] }],
-    "react/prop-types": ["warn", { ignore: ["navigator", "exec", "children", "style", "param"] }],
+    "react/prop-types": ["warn", { ignore: ["navigator", "global", "children", "style", "param"] }],
   }
 }
