--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "dev": "JS_DIR=`pwd`; cd node_modules/react-native; npm run start -- --root $JS_DIR  --reset-cache",
+    "release": "rm -rf $TMPDIR/react-*; rm ios/main.jsbundle; react-native bundle --platform ios --dev false --entry-file index.ios.js --bundle-output ios/main.jsbundle --assets-dest ios/",
     "lint": "eslint ./app",
     "validate": "npm ls",
     "test": "echo \"Error: no test specified\" && exit 1"
