--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-router-flux": "^3.32.0",
     "react-native-vector-icons": "^2.0.3",
     "react-redux": "^4.4.5",
+    "realm": "^0.14.3",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-logger": "^2.6.1",
