--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "release": "rm -rf $TMPDIR/react-*; rm ios/main.jsbundle; react-native bundle --platform ios --dev false --entry-file index.ios.js --bundle-output ios/main.jsbundle --assets-dest ios/",
     "lint": "eslint ./app",
     "validate": "npm ls",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register --recursive",
+    "test:watch": "npm test -- --watch"
   },
   "dependencies": {
     "lodash": "^4.14.2",
@@ -27,7 +28,10 @@
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
+    "babel-core": "^6.13.2",
     "babel-eslint": "5.0.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
     "eslint": "2.13.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-babel": "3.2.0",
@@ -35,6 +39,8 @@
     "eslint-plugin-jsx-a11y": "1.4.2",
     "eslint-plugin-react": "5.1.1",
     "estraverse-fb": "1.3.1",
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
     "precommit-hook-eslint": "3.0.0",
     "remote-redux-devtools": "^0.4.0"
   },
