--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.starterboilerplate"
+        applicationId "com.rnstarterboilerplate"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -126,11 +126,11 @@ android {
 }
 
 dependencies {
-    compile project(':realm')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
+    compile project(':ExtraDimensions')
 }
 
 // Run this once to be able to run the application with BUCK
