--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,8 @@
-rootProject.name = 'StarterBoilerplate'
+rootProject.name = 'RNStarterBoilerplate'
 
 include ':app'
-include ':realm'
-project(':realm').projectDir = new File(rootProject.projectDir, '../node_modules/realm/android')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+
+include ':ExtraDimensions', ':app'
+project(':ExtraDimensions').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-extra-dimensions-android/android')
