--- a/ios/RNStarterBoilerplate.xcodeproj/xcshareddata/xcschemes/RNStarterBoilerplate.xcscheme
+++ b/ios/RNStarterBoilerplate.xcodeproj/xcshareddata/xcschemes/RNStarterBoilerplate.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "StarterBoilerplate.app"
-               BlueprintName = "StarterBoilerplate"
-               ReferencedContainer = "container:StarterBoilerplate.xcodeproj">
+               BuildableName = "RNStarterBoilerplate.app"
+               BlueprintName = "RNStarterBoilerplate"
+               ReferencedContainer = "container:RNStarterBoilerplate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "StarterBoilerplateTests.xctest"
-               BlueprintName = "StarterBoilerplateTests"
-               ReferencedContainer = "container:StarterBoilerplate.xcodeproj">
+               BuildableName = "RNStarterBoilerplateTests.xctest"
+               BlueprintName = "RNStarterBoilerplateTests"
+               ReferencedContainer = "container:RNStarterBoilerplate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "StarterBoilerplateTests.xctest"
-               BlueprintName = "StarterBoilerplateTests"
-               ReferencedContainer = "container:StarterBoilerplate.xcodeproj">
+               BuildableName = "RNStarterBoilerplateTests.xctest"
+               BlueprintName = "RNStarterBoilerplateTests"
+               ReferencedContainer = "container:RNStarterBoilerplate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StarterBoilerplate.app"
-            BlueprintName = "StarterBoilerplate"
-            ReferencedContainer = "container:StarterBoilerplate.xcodeproj">
+            BuildableName = "RNStarterBoilerplate.app"
+            BlueprintName = "RNStarterBoilerplate"
+            ReferencedContainer = "container:RNStarterBoilerplate.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StarterBoilerplate.app"
-            BlueprintName = "StarterBoilerplate"
-            ReferencedContainer = "container:StarterBoilerplate.xcodeproj">
+            BuildableName = "RNStarterBoilerplate.app"
+            BlueprintName = "RNStarterBoilerplate"
+            ReferencedContainer = "container:RNStarterBoilerplate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StarterBoilerplate.app"
-            BlueprintName = "StarterBoilerplate"
-            ReferencedContainer = "container:StarterBoilerplate.xcodeproj">
+            BuildableName = "RNStarterBoilerplate.app"
+            BlueprintName = "RNStarterBoilerplate"
+            ReferencedContainer = "container:RNStarterBoilerplate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
